--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,13 @@
-.navbar{
-    background-color: #5991c9;
-    height: 25px;
-}
-.navbar > nav > ul {
-    text-decoration: none;
-    display: flex;
-    list-style: none;
-}
-.navbar >nav>ul>li{
-    padding-right: 20px;
-}
-.navbar >nav>ul>li:hover{
-    text-decoration: none;   
-}
-.navbar >nav>ul>li>a{
+
+a{
     color: black;
     text-decoration: none;
     font-weight: 500;
     font-size: larger;
     text-shadow: 2px #e8eaec;
 }
-.navbar >nav>ul>li>a:hover{
-    color:rgb(28, 29, 29)
+a:hover{
+    color:rgb(28, 29, 29);
+    text-decoration: none;
+    
 }
